Bulk add,kafka,redis part done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 
 spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.producer.key=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value=org.apache.kafka.common.serialization.StringSerializer
 
-spring.kafka.consumer.key=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.consumer.value=org.apache.kafka.common.serialization.StringSerializer
-
-spring.kafka.consumer.group-id=group-1
-spring.kafka.consumer.auto-offset-reset=earliest
+#spring.kafka.consumer.group-id=group-1
+#spring.kafka.consumer.auto-offset-reset=earliest
